Fix for recommendation content too narrow on display < 768px

--- a/style.css
+++ b/style.css
@@ -1384,7 +1384,6 @@ footer.site-footer {
 	}
 
 	.entry-recommendations-content {
-		max-width: calc(100vw - 2em);
 		columns: 1;
 	}
 
